Refactor data getters and add MySQL support
- Added ZabbixMySqlGetter class for fetching data from Zabbix MySQL database.
- Introduced MySqlDB class for MySQL database connection and operations.
- Updated ZabbixPSqlGetter class for PostgreSQL database interactions.
- Implemented check_itemId_cond method in both ZabbixMySqlGetter and ZabbixPSqlGetter for conditional item ID checks.
- Modified data_getter and data_processing modules to accommodate new MySQL functionality.
- Updated configuration files to include MySQL data source options.
- Added unit tests for MySQL database interactions.
- Refactored existing code to improve readability and maintainability.

--- a/default.yml
+++ b/default.yml
@@ -79,7 +79,7 @@ dbscan:
   detection_period: 43200
   sigma: 2.0
   max_iterations: 100
-
+classify_period: 86400 #1day
 
 ##################################################
 #  anomaly detection params
