--- a/samples/zabbix_psql.yml
+++ b/samples/zabbix_psql.yml
@@ -87,13 +87,13 @@ data_sources:
       
 
 view_sources:
-  zabbix:
-    dashboard_name: "anomaly_check_new"
-    type: "ZABBIX_PSQL_dashboard"
+  zb10:
+    dashboard_name: "abnormal_check"
+    type: "zabbix_dashboard"
     api_url: "{{ ZABBIX_PSQL_API_URL }}"
     user: "{{ ZABBIX_PSQL_API_USER }}"
     password: "{{ ZABBIX_PSQL_API_PASSWORD }}"
-    data_source_name: "zabbix"
+    data_source_name: "zb10"
 
 group_names:
   - hw/nw
