--- a/samples/logan.yml
+++ b/samples/logan.yml
@@ -14,25 +14,25 @@ logging:
   log_dir: "{{ HOME }}/anomdec/logs"
 
 data_sources:
-  log:
+  lognw:
     type: "logan"
-    name: "log"
+    name: "lognw"
     base_url: '{{ LOGAN_BASE_URL }}'
     minimal_group_size: 10000
     data_dir: "{{ HOME }}/anomdec/logandata"
     groups:
       firewall: 
-        1: IMTFW001
-        2: NFPFW003
+        1: {"name": "IMTFW001"}
+        2: {"name": "NFPFW003"}
       proxy:
-        3: SOPHOS-01
-        4: pfsense67051_openvpn
+        3: {"name": "SOPHOS-01", "minimal_group_size": 1000}
+        4: {"name": "pfsense67051_openvpn", "minimal_group_size": 100}
 
 
 view_sources:
-  log:
+  lognw:
     type: "logan"
-    name: "log"
+    name: "lognw"
     port: 5000
     chart_categories:
       bycluster:
@@ -57,4 +57,4 @@ trends_min_count: 30
 history_interval: 3600
 history_retention: 24
 history_recent_retention: 12
-classify_period: 2592000
+anomaly_keep_secs: 2592000
