--- a/samples/logan.yml
+++ b/samples/logan.yml
@@ -27,6 +27,15 @@ data_sources:
       proxy:
         3: {"name": "SOPHOS-01", "minimal_group_size": 1000}
         4: {"name": "pfsense67051_openvpn", "minimal_group_size": 100}
+      rp:
+        5: 
+          name: common-qa-nfrp177
+          base_url: http://192.168.88.177:9501
+          minimal_group_size: 10000
+        6: 
+          name: common-qa-rp01
+          base_url: http://10.1.247.59:9501
+          minimal_group_size: 10000
 
 
 view_sources:
