--- a/tests/test_config.yml
+++ b/tests/test_config.yml
@@ -1,6 +1,6 @@
 admdb:
   host: localhost
-  user: anomdec
+  user: anomdectest
   password: "{{ ADM_DB_PASSWORD }}"
   dbname: anomdec_test
   port: 5432
