Enhance DBSCAN functions to handle NaN values in distance matrices; add long trends retention configuration and update detection logic for long trends in the Detector class.

--- a/default.yml
+++ b/default.yml
@@ -27,6 +27,8 @@ admdb:
 trends_interval: 86400
 trends_retention: 14
 trends_min_count: 14
+long_trends_retention: 60
+long_trends_min_count: 40
 
 ##################################################
 #  history: Configuration for history analysis
